force-app/main/default/objects/SteelGrade__c/SteelGrade__c.object-meta.xml
<CustomObject>
    <label>Steel Grade</label>
    <nameField>
        <label>Steel Grade Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Steel Grades</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>