force-app/main/default/objects/SteelGrade__c/fields/ExcludeFromProductFinder__c.field-meta.xml
<CustomField>
    <fullName>ExcludeFromProductFinder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude steel grade from Product Finder</label>
    <type>Checkbox</type>
</CustomField>