force-app/main/default/objects/SteelGrade__c/fields/HighSellingFrequency__c.field-meta.xml
<CustomField>
    <fullName>HighSellingFrequency__c</fullName>
    <label>High Selling Frequency</label> 
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>0 - Unvalued</fullName>
            </value>
            <value>
                <fullName>1 - High selling frequency</fullName>
            </value>
            <value>
                <fullName>2 - Low selling frequency</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>