force-app/main/default/objects/SteelGrade__c/fields/SELNumber__c.field-meta.xml
<CustomField>
    <fullName>SELNumber__c</fullName>
    <label>SEL Number</label>
    <length>30</length>
    <required>true</required>
    <type>Text</type>
</CustomField>